# ducklink

./: .actrc  .gitignore  .gitmodules  404.html  AGENTS.md  BUILDS.md  CATALOG.md  Cargo.toml  DEPLOYMENT.md  Makefile  PLAN-duckdb-extensions.md  PLAN-iceberg.md  PLAN-multi-provider-extensions.md  PLAN-orchestrator-adoption.md  PLAN-python-ml-composition.md  README.md  TODO-preview2-filesystem.md  index.html  markdown-page.html  requirements-dev.txt  sitemap.xml
.cargo/: config.toml
ci/: duckdb-commit.txt  duckdb-wasm.patch
cmake/: excel-deps.cmake  mysql-deps.cmake  postgres-deps.cmake  spatial-deps.cmake  wasm-extension-config.cmake
crates/duckdb-cli-component/: Cargo.toml
crates/duckdb-cli-component/src/: bindings.rs  lib.rs
crates/duckdb-component-host/: Cargo.toml
crates/duckdb-component-host/src/: handler.rs  lib.rs  ui_server.rs
crates/duckdb-loader-stub/: Cargo.toml
crates/duckdb-loader-stub/src/: bindings.rs  lib.rs
crates/ducklink-core/: Cargo.toml
crates/ducklink-core/src/: bindings.rs  lib.rs  tvm_spill.rs
crates/ducklink-host/: Cargo.toml
crates/ducklink-host/src/: compose_dynlink.rs  delta_rewrite.rs  extcli.rs  handler.rs  httpd.rs  lib.rs  plan_shape.rs  prefix.rs  publish.rs  quack_server.rs  replicate.rs  resolver.rs  sigv4.rs  ui_console.html  ui_server.rs
crates/ducklink-host/tests/: compose_dynlink_dlopen.rs
crates/ducklink-runtime/: Cargo.toml  build.rs
crates/ducklink-runtime/examples/: dispatch_bench.rs
crates/ducklink-runtime/src/: compose_dynlink.rs  extension.rs  lib.rs
crates/ducklink-runtime/wit/: duckdb-extension-host.wit
crates/storage-boundary-test/: Cargo.toml
crates/storage-boundary-test/src/: lib.rs
crates/storage-boundary-test/tests/: boundary.rs
crates/storage-boundary-test/wit/: boundary.wit
crates/table-stream-boundary-test/: Cargo.toml
crates/table-stream-boundary-test/src/: lib.rs
crates/table-stream-boundary-test/tests/: boundary.rs
crates/table-stream-boundary-test/wit/: boundary.wit
docs/: PLAN-capability-migration.md  architecture.html  capabilities.html  catalog.html  component-extension-guide.md  component-plugin-plan.md  duckdb-community-extensions.md  duckdb-official-extensions.md  duckdb-wasm-httpd.md  guides.html  intro.html  postgis-mobilitydb-integration.md  python-source-tier-plan.md  reference.html  remaining-wit-capabilities-plan.md  roadmap-to-signing.md  v4-columnar-abi.md  versioning-and-support-policy.md  wireguard-feasibility.md  wit-freeze-policy.md  wit-leak-audit.md  wit-stable-c-peg.md  wit-storage-interface.md
extensions-site/: .gitignore  Dockerfile  README.md  build.py  cloudbuild.yaml
extensions/ascii85-component/: Cargo.toml  conformance.expected  conformance.sql  smoke.expected  smoke.sql
extensions/ascii85-component/src/: lib.rs
extensions/atbash-component/: Cargo.toml  conformance.expected  conformance.sql  smoke.expected  smoke.sql
extensions/atbash-component/src/: lib.rs
extensions/autocomplete-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/autocomplete-component/src/: bindings.rs  lib.rs
extensions/autocomplete-component/wit/: duckdb-extension.wit  query.wit
extensions/avrofns-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/avrofns-component/src/: lib.rs
extensions/azfs-component/: Cargo.toml  smoke.sql.requires-live-server
extensions/azfs-component/src/: azure.rs  lib.rs
extensions/azfs-component/wit/: duckdb-extension.wit  file-dispatch.wit  files-reg.wit
extensions/base45-component/: Cargo.toml  conformance.expected  conformance.sql  smoke.expected  smoke.sql
extensions/base45-component/src/: lib.rs
extensions/base58check-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/base58check-component/src/: lib.rs
extensions/baseN-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/baseN-component/src/: lib.rs
extensions/baseN-component/wit/: callback-dispatch.wit
extensions/baseconv-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/baseconv-component/src/: lib.rs
extensions/bbcode-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/bbcode-component/src/: lib.rs
extensions/bech32-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/bech32-component/src/: lib.rs
extensions/bencode-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/bencode-component/src/: lib.rs
extensions/bencode-component/wit/: logging.wit
extensions/bibtex-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/bibtex-component/src/: lib.rs
extensions/bibtex-component/wit/: duckdb-extension.wit
extensions/bitfilters-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/bitfilters-component/src/: lib.rs
extensions/braille-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/braille-component/src/: bindings.rs  lib.rs
extensions/bundle-dotcmd/: Cargo.toml
extensions/bundle-dotcmd/src/: bindings.rs  lib.rs
extensions/casing-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/casing-component/src/: lib.rs
extensions/casing-component/wit/: guest.wit
extensions/cbor-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/cbor-component/src/: lib.rs
extensions/celestial-component/: Cargo.toml  smoke.expected  smoke.sql
extensions/celestial-component/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: bencode_decode.rs  ggsql_parse.rs  hex_decode.rs  mysql_parse.rs  plan_shape_parse.rs  postgres_parse.rs  qopt_optimize.rs  window_frame.rs  wkb_decode.rs
python-sdk/: README.md  pyproject.toml
python-sdk/ducklink/: __init__.py  decorators.py  pep723.py  registry.py  runtime.py  types.py
python-sdk/example/: text_tools.py
python-sdk/tests/: conftest.py  test_decorators.py  test_example.py  test_pep723.py  test_runtime.py  test_types.py
registry/: builds.json  index.json
scripts/: build-azure-sdk-wasm.sh  build-delta-kernel-wasm.sh  build-libduckdb-wasm.sh  build-wasi-deps.sh  capture-duckdb-ui.sh  ci-local.sh  det-build.sh  new-component-extension.sh  smoke-cli.sh  (+5 more)
(+1188 files in other folders)
