[workspace]
members = [
    "crates/libduckdb-sys",
    "crates/duckdb-core-component",
    "crates/duckdb-cli-component",
    "crates/duckdb-loader-stub",
    "crates/duckdb-component-host",
    "extensions/sample-extension-component",
    "extensions/isin",
    "extensions/isin-component",
    "extensions/baseN-component",
    "handlers/echo-handler",
    "extensions/luhn-component",
    "extensions/iban-component",
    "extensions/creditcard-component",
    "extensions/ean-component",
    "extensions/aba-component",
    "extensions/crypto-component",
    "extensions/casing-component",
    "extensions/markdown-component",
    "extensions/hashfuncs-component",
    "extensions/csscolor-component",
    "extensions/rapidfuzz-component",
    "extensions/uuidx-component",
    "extensions/url-component",
    "extensions/email-component",
    "extensions/semver-component",
    "extensions/slug-component",
    "extensions/escape-component",
    "extensions/natsort-component",
    "extensions/roman-component",
    "extensions/humansize-component",
    "extensions/ids-component",
    "extensions/idna-component",
    "extensions/mac-component",
    "extensions/isbn-component",
    "extensions/morse-component",
    "extensions/humantime-component",
    "extensions/color-component",
    "extensions/iso-component",
    "extensions/geohash-component",
    "extensions/currency-component",
    "extensions/hmac-component",
    "extensions/phonetic-component",
    "extensions/jwt-component",
    "extensions/totp-component",
    "extensions/baseconv-component",
    "extensions/emoji-component",
    "extensions/whatlang-component",
    "extensions/ipaddr-component",
    "extensions/mime-component",
    "extensions/pluralize-component",
    "extensions/haversine-component",
    "extensions/numwords-component",
    "extensions/ordinal-component",
    "extensions/nato-component",
    "extensions/ascii85-component",
    "extensions/quotedprintable-component",
    "extensions/unitconv-component",
    "extensions/wordwrap-component",
    "extensions/timezone-component",
    "extensions/rot13-component",
    "extensions/leetspeak-component",
    "extensions/dms-component",
    "extensions/cbor-component",
    "extensions/msgpack-component",
    "extensions/elements-component",
    "extensions/vigenere-component",
    "extensions/petname-component",
    "extensions/base58check-component",
    "extensions/checksums-component",
    "extensions/siphash-component",
    "extensions/tiktoken-component",
    "extensions/bech32-component",
    "extensions/uuid5-component",
    "extensions/gravatar-component",
    "extensions/html2text-component",
    "extensions/textstat-component",
    "extensions/hashids-component",
    "extensions/checkdigit-component",
    "extensions/dice-component",
]

resolver = "2"
