[workspace]
members = [
    # libduckdb-sys + the DuckDB-wasm core moved to the standalone ../duckdb-wasm
    # repo (consumed by path); see crates/ducklink-host bindgen + the Makefile.
    "crates/ducklink-runtime",
    "crates/ducklink-cli",
    "crates/ducklink-loader",
    "crates/ducklink-host",
    "extensions/sample-extension-component",
    "extensions/isin",
    "extensions/greet-dotcmd",
    "extensions/core-dotcmd",
    "extensions/duckdb-utils-schema",
    "extensions/duckdb-utils-data",
    "extensions/duckdb-utils-fts",
    "extensions/duckdb-utils-maint",
    "extensions/isin-component",
    "extensions/baseN-component",
    "handlers/echo-handler",
    "extensions/luhn-component",
    "extensions/iban-component",
    "extensions/creditcard-component",
    "extensions/ean-component",
    "extensions/aba-component",
    "extensions/crypto-component",
    "extensions/casing-component",
    "extensions/markdown-component",
    "extensions/hashfuncs-component",
    "extensions/csscolor-component",
    "extensions/rapidfuzz-component",
    "extensions/uuidx-component",
    "extensions/url-component",
    "extensions/email-component",
    "extensions/semver-component",
    "extensions/slug-component",
    "extensions/escape-component",
    "extensions/natsort-component",
    "extensions/roman-component",
    "extensions/humansize-component",
    "extensions/ids-component",
    "extensions/idna-component",
    "extensions/mac-component",
    "extensions/isbn-component",
    "extensions/morse-component",
    "extensions/humantime-component",
    "extensions/color-component",
    "extensions/iso-component",
    "extensions/geohash-component",
    "extensions/currency-component",
    "extensions/hmac-component",
    "extensions/phonetic-component",
    "extensions/jwt-component",
    "extensions/totp-component",
    "extensions/baseconv-component",
    "extensions/emoji-component",
    "extensions/whatlang-component",
    "extensions/ipaddr-component",
    "extensions/mime-component",
    "extensions/pluralize-component",
    "extensions/haversine-component",
    "extensions/numwords-component",
    "extensions/ordinal-component",
    "extensions/nato-component",
    "extensions/ascii85-component",
    "extensions/quotedprintable-component",
    "extensions/unitconv-component",
    "extensions/wordwrap-component",
    "extensions/timezone-component",
    "extensions/rot13-component",
    "extensions/leetspeak-component",
    "extensions/dms-component",
    "extensions/cbor-component",
    "extensions/msgpack-component",
    "extensions/elements-component",
    "extensions/vigenere-component",
    "extensions/petname-component",
    "extensions/base58check-component",
    "extensions/checksums-component",
    "extensions/siphash-component",
    "extensions/tiktoken-component",
    "extensions/bech32-component",
    "extensions/uuid5-component",
    "extensions/gravatar-component",
    "extensions/html2text-component",
    "extensions/textstat-component",
    "extensions/hashids-component",
    "extensions/checkdigit-component",
    "extensions/dice-component",
    "extensions/graycode-component",
    "extensions/cardtype-component",
    "extensions/money-component",
    "extensions/ngrams-component",
    "extensions/stem-component",
    "extensions/transliterate-component",
    "extensions/pluscode-component",
    "extensions/rot47-component",
    "extensions/stopwords-component",
    "extensions/isbnconv-component",
    "extensions/passgen-component",
    "extensions/braille-component",
    "extensions/toml-component",
    "extensions/yaml-component",
    "extensions/unicodenorm-component",
    "extensions/unicodewidth-component",
    "extensions/colorconv-component",
    "extensions/jsonschema-component",
    "extensions/simhash-component",
    "extensions/idextra-component",
    "extensions/phonetic2-component",
    "extensions/z85-component",
    "extensions/initials-component",
    "extensions/luhngen-component",
    "extensions/atbash-component",
    "extensions/piglatin-component",
    "extensions/rle-component",
    "extensions/bbcode-component",
    "extensions/phonenumber-component",
    "extensions/qrcode-component",
    "extensions/pwstrength-component",
    "extensions/aggstat-component",
    "extensions/bloom-component",
    "extensions/minhash-component",
    "extensions/countmin-component",
    "extensions/dns-component",
    "extensions/http-component",
    "extensions/lorem-component",
    "extensions/faker-component",
    "extensions/passphrase-component",
]

resolver = "2"
