[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducklink"
version = "0.1.0"
description = "ducklink Python authoring API: decorate scalar/table/aggregate functions and emit a manifest the host registers as SQL functions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ducklink" }]
keywords = ["ducklink", "duckdb", "wasm", "extension", "authoring"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["ducklink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
