[package]
name = "duckdb-component-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "1ec866079720e573fc2aa06947c84f6132010993", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "1ec866079720e573fc2aa06947c84f6132010993" }
# Tiered Virtual Memory: host-owned regions back DuckDB's >4 GiB spill tier.
# tvm-core is wasmtime-free, so it works with this host's pinned wasmtime (39)
# even though tvm-wasmtime targets 45; the manager/bytes host traits are
# implemented in this crate against this host's bindgen.
tvm-core = { path = "../../../../tvm-wasm/crates/tvm-core" }

[dev-dependencies]
tempfile = "3"
arrow-ipc = { version = "53", default-features = false }
arrow-array = { version = "53", default-features = false }

[[bin]]
name = "duckdb-host"
path = "src/bin/duckdb-host.rs"
