[package]
name = "ducklink-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libduckdb-sys = { path = "../libduckdb-sys" }
thiserror = "1.0"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
libc = { version = "0.2", default-features = false }
arrow-array = { version = "53", default-features = false, features = ["ffi"] }
arrow-schema = { version = "53", default-features = false, features = ["ffi"] }
arrow-data = { version = "53", default-features = false, features = ["ffi"] }
arrow-ipc = { version = "53", default-features = false }

# Embeddable extensions (the embed framework): WIT-free algorithm crates the
# core compiles in and registers as native scalars (no WIT boundary) when the
# matching embed-<name> feature is enabled.
isin = { path = "../../extensions/isin", optional = true }

[features]
default = ["wasi"]
wasi = ["fs_shims"]
browser = []
fs_shims = []
# Compile the isin extension into the core (native speed, works in the standalone).
embed-isin = ["dep:isin"]

[package.metadata.component]
package = "duckdb:component"

[package.metadata.component.target]
path = "wit"
world = "libduckdb"

[package.metadata.component.target.dependencies]
"duckdb:extension" = { path = "../../wit/duckdb-extension" }
"wasi:cli" = { path = "wit/deps/wasi-cli" }
"wasi:filesystem" = { path = "wit/deps/wasi-filesystem" }
"wasi:io" = { path = "wit/deps/wasi-io" }
"wasi:clocks" = { path = "wit/deps/wasi-clocks" }
"wasi:sockets" = { path = "wit/deps/wasi-sockets" }
"wasi:random" = { path = "wit/deps/wasi-random" }
"tvm:memory" = { path = "wit/deps/tvm" }
