[package]
name = "ducklink-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# The reusable wasm-component-loading engine (being extracted from this crate).
ducklink-runtime = { path = "../ducklink-runtime" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "46.0.1", features = ["component-model", "cache"] }
wasmtime-wasi = "46.0.1"
# Tiered Virtual Memory: host-owned regions back DuckDB's >4 GiB spill tier.
# tvm-core is wasmtime-free, so it works with this host's pinned wasmtime (39)
# even though tvm-wasmtime targets 45; the manager/bytes host traits are
# implemented in this crate against this host's bindgen.
tvm-core = { path = "../../../tvm-wasm/crates/tvm-core" }
# TLS for `ducklink serve` (the httpd). Blocking rustls over the accept
# loop's TcpStream; rcgen mints the --tls-self-signed cert. Mirrors the
# sqlite-wasm-httpd stack.
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
# Parse the structured `{status, body, ctype}` response a wasm handler returns.
serde_json = "1"

[dev-dependencies]
tempfile = "3"
arrow-ipc = { version = "53", default-features = false }
arrow-array = { version = "53", default-features = false }

[[bin]]
name = "ducklink"
path = "src/bin/ducklink.rs"
