[package]
name = "ducklink-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# The reusable wasm-component-loading engine (being extracted from this crate).
ducklink-runtime = { path = "../ducklink-runtime" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "46.0.1", features = ["component-model", "cache"] }
wasmtime-wasi = "46.0.1"
# Tiered Virtual Memory: host-owned regions back DuckDB's >4 GiB spill tier.
# tvm-core is wasmtime-free, so it works with this host's pinned wasmtime (39)
# even though tvm-wasmtime targets 45; the manager/bytes host traits are
# implemented in this crate against this host's bindgen.
tvm-core = { path = "../../../tvm-wasm/crates/tvm-core" }
# TLS for `ducklink serve` (the httpd). Blocking rustls over the accept
# loop's TcpStream; rcgen mints the --tls-self-signed cert. Mirrors the
# sqlite-wasm-httpd stack.
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
# Parse the structured `{status, body, ctype}` response a wasm handler returns.
serde_json = "1"
# Shared content-addressed-storage core: the BlobBackend trait + the
# trust-gated CompileCache. Used here to HMAC-authenticate the precompiled
# `.cwasm` (a `.cwasm` deserializes to runnable machine code, so it must be
# trusted). compose-core is wasmtime-free and sqlite-free.
compose-core = { git = "https://github.com/tegmentum/webassembly-component-orchestration.git", branch = "main" }
# Home-dir resolution for the per-machine HMAC key + FsBlobStore cache root.
dirs = "5"
# Shared, db-agnostic crates (also consumed by the sqlink host). datalink is
# PUBLIC. These are HOST-only deps; ducklink-runtime (the vendored extension
# runtime) is untouched, so no extension re-vendor is implied.
#   - datalink-policy: canonical capability-grant types. The coarse
#     DUCKLINK_NETWORK_GRANT env is compiled into a canonical Policy via an
#     adapter (allow-all / deny-all / per-name); behavior is unchanged.
#   - datalink-prefix: the prefix__name resolution algorithm + the
#     collision/pin model behind a PrefixStore trait, backed in-memory here.
datalink-policy = { git = "https://github.com/tegmentum/datalink.git" }
datalink-prefix = { git = "https://github.com/tegmentum/datalink.git" }

[dev-dependencies]
tempfile = "3"
arrow-ipc = { version = "53", default-features = false }
arrow-array = { version = "53", default-features = false }

[[bin]]
name = "ducklink"
path = "src/bin/ducklink.rs"
