[package]
name = "ducklink-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# The reusable wasm-component-loading engine (being extracted from this crate).
ducklink-runtime = { path = "../ducklink-runtime" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmtime = { version = "46.0.1", features = ["component-model", "cache"] }
wasmtime-wasi = "46.0.1"
# Tiered Virtual Memory: host-owned regions back DuckDB's >4 GiB spill tier.
# tvm-core is wasmtime-free; the manager/bytes host traits are implemented in
# this crate against this host's bindgen. Sourced via a pinned git rev of
# tvm-wasm (not a local path) so ducklink builds standalone AND so ChimeraDB's
# in-process build (which links ducklink-host + sqlink-host) resolves a SINGLE
# tvm-core source — sqlink-host pins the same rev. See chimeradb/PLAN-inprocess.md PR1.
tvm-core = { git = "https://github.com/tegmentum/tvm-wasm.git", rev = "6f3bae38fad4addd4de1837ab151f4ac871d1dd4" }
# TLS for `ducklink serve` (the httpd). Blocking rustls over the accept
# loop's TcpStream; rcgen mints the --tls-self-signed cert. Mirrors the
# sqlite-wasm-httpd stack.
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
# Parse the structured `{status, body, ctype}` response a wasm handler returns,
# and the duckstream replicator's state.json sidecar.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# duckstream MVP (native-host checkpoint-snapshot replication to S3): blocking
# HTTP transport over rustls (HTTPS), lz4 snapshot compression, and the SigV4
# signing primitives (hmac/sha2/hex) reused by the `sigv4` module copied verbatim
# from the wasm s3fs transport.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots", "http2"] }
lz4_flex = "0.11"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Shared content-addressed-storage core: the BlobBackend trait + the
# trust-gated CompileCache. Used here to HMAC-authenticate the precompiled
# `.cwasm` (a `.cwasm` deserializes to runnable machine code, so it must be
# trusted). compose-core is wasmtime-free and sqlite-free.
compose-core = { git = "https://github.com/tegmentum/webassembly-component-orchestration.git", branch = "main" }
# Home-dir resolution for the per-machine HMAC key + FsBlobStore cache root.
dirs = "5"
# Shared, db-agnostic crates (also consumed by the sqlink host). datalink is
# PUBLIC. These are HOST-only deps; ducklink-runtime (the vendored extension
# runtime) is untouched, so no extension re-vendor is implied.
#   - datalink-policy: canonical capability-grant types. The coarse
#     DUCKLINK_NETWORK_GRANT env is compiled into a canonical Policy via an
#     adapter (allow-all / deny-all / per-name); behavior is unchanged.
#   - datalink-prefix: the prefix__name resolution algorithm + the
#     collision/pin model behind a PrefixStore trait, backed in-memory here.
datalink-policy = { git = "https://github.com/tegmentum/datalink.git", rev = "88782655415e22bb67c4cb3575a10fc1938b14e0" }
datalink-prefix = { git = "https://github.com/tegmentum/datalink.git", rev = "88782655415e22bb67c4cb3575a10fc1938b14e0" }

[dev-dependencies]
tempfile = "3"
arrow-ipc = { version = "53", default-features = false }
arrow-array = { version = "53", default-features = false }

[[bin]]
name = "ducklink"
path = "src/bin/ducklink.rs"
