[package]
name = "ducklink-runtime"
version = "0.1.0"
edition = "2021"
description = "Reusable wasm-component-loading engine shared by the ducklink host and the native-DuckDB ducklink extension"
license = "MIT"
publish = false

[dependencies]
# The wasm engine. crates.io 45.0.1 so the generated `duckdb:extension`
# bindings are ABI-identical across both directions, and so this matches the
# sqlink host + the webassembly-component-orchestration framework (which is on
# 45.0.1), letting ducklink later reuse the framework's compose:dynlink host.
wasmtime = { version = "46.0.1", features = ["component-model", "cache"] }
# The extension store-state holds a WasiCtx and implements WasiView (components
# target wasip2). Same version as wasmtime.
wasmtime-wasi = "46.0.1"

[lib]
