[package]
name = "storage-boundary-test"
version = "0.1.0"
edition = "2021"
publish = false
description = """
Host-side integration test: loads the already-built sqlite component wasm and
drives its storage-dispatch exports ACROSS the WIT component boundary via
wasmtime, proving projection + filter pushdown crosses the interface (not just
the component's native logic). Imports are satisfied with trapping stubs.
"""

[dependencies]
# Same wasmtime rev as crates/ducklink-runtime, with component-model.
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "1ec866079720e573fc2aa06947c84f6132010993", features = ["component-model"] }
# The sqlite component is a wasip2 component (built with std + rusqlite), so it
# imports the wasi:cli/filesystem/io interfaces. Satisfy them with a real (but
# unused) WASI ctx — same rev as wasmtime.
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "1ec866079720e573fc2aa06947c84f6132010993" }
anyhow = "1"

[dev-dependencies]
# Build the sample SQLite DB bytes natively (same approach as the component's
# own tests: bundled SQLite + raw sqlite3_serialize FFI).
rusqlite = { version = "0.32", features = ["bundled"] }
libsqlite3-sys = "0.30"
