[package]
name = "ascii85-component"
version = "0.1.0"
edition = "2021"
description = """
Ascii85 / Base85 encode/decode
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
ascii85 = "*"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
