[package]
name = "ascii85-component"
version = "0.1.0"
edition = "2021"
description = """
Ascii85 / Base85 encode/decode
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
ascii85-core = { path = "../../../datalink/extensions/ascii85-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
ascii85 = "*"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
