[package]
name = "atbash-component"
version = "0.1.0"
edition = "2021"
description = """
Atbash cipher (hand-rolled)
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
atbash-core = { path = "../../../datalink/extensions/atbash-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
