[package]
name = "autocomplete-component"
version = "0.1.0"
edition = "2021"
description = """
SQL auto-completion as a DuckDB table function: sql_complete(partial VARCHAR) ->
table(suggestion VARCHAR, kind VARCHAR). Prefix-matches the last token of the
partial query against a bundled SQL keyword list (kind='keyword'). Catalog-name
completion (table/column) is out of scope -- it needs a live-connection query
import this component type does not have. Pure Rust, never panics.
"""
license = "MIT"
publish = false

[lib]
name = "autocomplete"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
