[package]
name = "base45-component"
version = "0.1.0"
edition = "2021"
description = """
Base45 encoding (RFC 9285) for BLOB<->VARCHAR; used by the EU Digital COVID certificate
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# Shared, DB-agnostic logic + capability declaration (datalink pull-up).
base45-core = { path = "../../../datalink/extensions/base45-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }
base45 = "3"

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
