[package]
name = "baseN-component"
version = "0.1.0"
edition = "2021"
description = """
Compact base-N codecs (base32 RFC4648, base58 Bitcoin alphabet) for blob<->text
"""
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
base32 = { version = "0.5", default-features = false }
# compat-registry: features = ['alloc'] with default-features = false
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
